# one-time-share

./: .gitignore  Cargo.toml  README.md  app-config.json  go.mod  go.sum  index.html  main.go  shared.html
.github/workflows/: build.yml
database/: db.go  db_test.go  one_time_share_db.go  one_time_share_db_test.go  update.go
src/: database.rs  main.rs
tools/: run_daemon.sh
